fixing footer wrapping

--- a/src/main/org/freemarker/docgen/statics/docgen.css
+++ b/src/main/org/freemarker/docgen/statics/docgen.css
@@ -472,9 +472,9 @@ th {
 .footer-bottom p {
   margin: 0 0 6px;
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 auto;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
+  -webkit-flex: 0 1 auto;
+  -ms-flex: 0 1 auto;
+  flex: 0 1 auto;
 }
 .footer-bottom .last-updated {
   font-size: 12px;
